<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RetrofitPOC</string>
    <string name="app_logo_description">Logo Concrete Challenge - Isan</string>

    <!-- Cards -->
    <string name="user_photo_description">Logo or user photo</string>

    <!-- Menu - Actions -->
    <string name="menu_action_refresh">Update</string>
    <string name="menu_action_about">About</string>

    <!-- Messages -->
    <string name="message_warning_empty">No item found.</string>
    <string name="message_error_invalid_parameters">Invalid parameter. Please, restart the application and try again.</string>
    <string name="message_error_communication_network">Network failure.\n Check your internet connection.</string>
    <string name="message_error_communication_server">Error communicating with the server, try again later.</string>
    <string name="message_error_communication_unauthorized">Authentication failure.</string>
    <string name="message_error_communication_unknown">Sorry, an unknown error has occurred while communicating with the server.</string>

    <!-- Loader -->
    <string name="loader_loading">Loading</string>
    <string name="loader_wait_message">Please wait&#8230;</string>

    <!-- About -->
    <string name="about_title">Created by:</string>
    <string name="about_name">Isan de Sousa Castro Campos</string>
    <string name="button_close">Close</string>
    <!--<string name="about_email">isansc@hotmail.com</string>-->
    <string name="about_email"><![CDATA[<a href="mailto:isansc@hotmail.com">isansc@hotmail.com</a>]]></string>
    <string name="about_phone">+55 (19) 98232&#8211;5322</string>
    <string name="about_phone_copied">Phone number copied.</string>

</resources>
