<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.AboutActivity"
    android:background="@color/dark_semi_transparent"
    android:id="@+id/grp_container"
    >
    <LinearLayout
        android:id="@+id/grp_databox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/margin_card"
        android:paddingBottom="@dimen/margin_card"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:background="@android:color/white"
        >
        <ImageButton
            android:id="@+id/btn_close"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:contentDescription="@string/button_close"
            android:src="@drawable/ic_close_black_24dp"
            />
        <TextView
            style="@style/Text.Card.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_activity"
            android:layout_marginStart="@dimen/margin_card"
            android:text="@string/about_title"
            />

        <TextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_activity"
            android:layout_marginStart="@dimen/margin_card"
            android:textSize="@dimen/text_size_big_1"
            android:text="@string/about_name"
            />

        <TextView
            android:id="@+id/txt_email"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_activity"
            android:layout_marginStart="@dimen/margin_card"
            android:textSize="@dimen/text_size_big_1"
            android:text="@string/about_email"
            />

        <TextView
            android:id="@+id/txt_phone"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_activity"
            android:layout_marginStart="@dimen/margin_card"
            android:textSize="@dimen/text_size_big_1"
            android:text="@string/about_phone"
            />

    </LinearLayout>
</RelativeLayout>
